--- a/week01/lecture04/index.html
+++ b/week01/lecture04/index.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>heading1</h1>
+  <h2>heading2</h2>
+  <h3>heading3</h3>
+  <h4>heading4</h4>
+  <h5>heading5</h5>
+  <h6>heading6</h6>
+  <p>This tag is used to write paragraphs</p>
+  <hr>
+  
 
+  <p>This is my Image</p>
+  <img src="https://www.google.com/imgres?q=virat%20kohli&imgurl=https%3A%2F%2Fdocuments.iplt20.com%2Fipl%2FIPLHeadshot2024%2F2.png&imgrefurl=https%3A%2F%2Fwww.iplt20.com%2Fteams%2Froyal-challengers-bengaluru%2Fsquad-details%2F164&docid=J-kIYLj5COCekM&tbnid=n9r2sJb2EKTuOM&vet=12ahUKEwiBtaf13NKGAxV68DgGHYWIBr8QM3oECB4QAA..i&w=1024&h=1024&hcb=2&itg=1&ved=2ahUKEwiBtaf13NKGAxV68DgGHYWIBr8QM3oECB4QAA" width="200" length="200" alt="virat kohli">
+
+  <button>Click Me</button>
+
+  
+
+  <blockquote>week1</blockquote>
+  <q>lecture04</q>
+
+  <p><abbr title="World Health Organization">WHO</abbr> is a great  organization</p>
+
+  <address>This is address tag</address>
+  <h3>Ordered List</h3>
+  <ol>
+  <li>Coffee</li>
+  <li>Milk</li>
+  <li>Tea</li>
+  </ol>
+
+
+  <h1>Unordered List</h1>
+  <ul>
+    <li>Coffee</li>
+    <li>Milk</li>
+    <li>Tea</li>
+  </ul>
+
+
+  <h1>Description List</h1>
+  <dl>
+    <dt>M in mern</dt>
+    <dd>mongoBD</dd>
+    
+    <dt>E in mern</dt>
+    <dd>express</dd>
+    
+    <dt>R in  mern</dt>
+    <dd>react</dd>
+
+    <dt>N in  mern</dt>
+    <dd>node</dd>
+  </dl>
+
+  <b> bold text</b>
+  <i> italic text/i><br>
+
+
+  <div style=color:red;>
+    This tag is in red color
+  </div>
+
+  <span>This is span tag</span>
+
+
+</body>
+</html>
