--- a/week01/lecture05/index.html
+++ b/week01/lecture05/index.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+</head>
+<body>
+  <h1>lokesh reddy</h1>
+  <p id="par1">paragraph</p>
+  <p id="par2">paragraph</p>
+  <p id="par3">paragraph</p>
 
+  <div>
+    <p>this text is inside para tag and that is inside div</p>
+  </div><hr><br>
+
+  <div>
+    <p>this is para</p>
+    <section>
+      <p>this para inside section that is inside div</p>
+    </section>
+  </div><br><br>
+
+
+  <div>
+    <p>this is para</p>
+  </div>
+  <p>this is adjacent to div</p>
+  <p>this is adjacent to div</p><br>
+
+  <h3>this is h3</h3>
+  <h4>this is h4</h4>
+  <h4>this is h4</h4>
+  <h4>this is h4</h4><br><br>
+
+  <div>
+    <p id="hoverid">chipher schools</p>
+  </div>
+
+  <div>
+    <a href="https://X.com">twitter</a><br>
+    <a href="https://youtube.com" target="_blank">YOUTUBE</a>
+  </div>
+</body>
+</html>
